# gst-plugins-cheese

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README.md  configure.ac  meson.build
examples/: Makefile.am
examples/detector/: .main.cpp.swp  Makefile.am  main.cpp
examples/gl-version/: Makefile.am  gl-version.cpp
examples/stepper/: stepper.py
examples/stepper/ui/: example1.ui  menu.ui
flatpak/: io.github.cfoch.gst_plugins_cheese.json.in
flatpak/patches/: 0001-opencv-Allow-to-build-using-opencv-4.patch
gst/: Makefile.am  meson.build
gst-libs/gst/: meson.build
gst-libs/gst/cheese/: gstcheese.h  meson.build
gst-libs/gst/cheese/face/: cheesefaceinfo.c  cheesefaceinfo.h  cheesefaceoverlay.c  cheesefaceoverlay.h  cheesefacesprite.c  cheesefacesprite.h  cheesefacespriteframe.c  cheesefacespriteframe.h  cheesefacespritekeypoint.c  cheesefacespritekeypoint.h  cheesemultifaceinfo.c  cheesemultifaceinfo.h  cheesemultifacemeta.c  cheesemultifacemeta.h  cheesemultifacesprite.c  cheesemultifacesprite.h
gst/3d/: gstcheese3d.c  gstcheese3dfilter.c  gstcheese3dfilter.h  meson.build
gst/face/: Makefile.am  cheesefacesprite.c  cheesefacespriteframe.c  cheesefacespriteframe.h  cheesefacespritekeypoint.c  cheesefacespritekeypoint.h  cheesemultifacesprite.c  cheesemultifacesprite.h  facetrack.cpp  facetrack.h  gstcheesefacedetect.cpp  gstcheesefacedetect.h  gstcheesefaceeffects.cpp  gstcheesefaceomelette.cpp  gstcheesefaceomelette.h  gstcheesefaceoverlay.c  gstcheesefaceoverlay.h  gstcheesefacetrack.cpp  gstcheesefacetrack.h  meson.build  utils.cpp  utils.h
src/: gstcheesefacedetect.c  gstcheesefacedetect.h
tests/cheese/: facesprite.c  facespriteframe.c  facespritekeypoint.c  meson.build  multifacesprite.c
tools/: build-flatpak.sh
